2008-05-05  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - document opcodes relating to jumps, scopes, and property name iteration
        
        Documented jmp, jtrue, false, push_scope, pop_scope, get_pnames,
        next_pname and jmp_scopes.

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitJump):
        (KJS::CodeGenerator::emitJumpIfTrue):
        (KJS::CodeGenerator::emitJumpIfFalse):
        (KJS::CodeGenerator::emitPushScope):
        (KJS::CodeGenerator::emitNextPropertyName):
        (KJS::CodeGenerator::emitGetPropertyNames):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * kjs/nodes.cpp:
        (KJS::LogicalAndNode::emitCode):
        (KJS::LogicalOrNode::emitCode):
        (KJS::ConditionalNode::emitCode):
        (KJS::IfNode::emitCode):
        (KJS::IfElseNode::emitCode):
        (KJS::DoWhileNode::emitCode):
        (KJS::WhileNode::emitCode):
        (KJS::ForNode::emitCode):
        (KJS::ForInNode::emitCode):
        (KJS::WithNode::emitCode):

2008-05-05  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver.

        Bug 18749: SQUIRRELFISH: const support is broken
        <https://bugs.webkit.org/show_bug.cgi?id=18749>

        Adds support for const during code generation.

        Fixes 2 layout tests.

        * ChangeLog:
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::addVar):
        (KJS::CodeGenerator::CodeGenerator):
        (KJS::CodeGenerator::isLocalConstant):
        * VM/CodeGenerator.h:
        (KJS::CodeGenerator::addVar):
        * kjs/nodes.cpp:
        (KJS::PostIncResolveNode::emitCode):
        (KJS::PostDecResolveNode::emitCode):
        (KJS::PreIncResolveNode::emitCode):
        (KJS::PreDecResolveNode::emitCode):
        (KJS::ReadModifyResolveNode::emitCode):
        (KJS::AssignResolveNode::emitCode):

2008-05-04  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Geoff.